--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -66,6 +66,52 @@
   }
 }
 
-* {
-  transition: all ease-in-out 0.3s;
+/* Typography */
+
+.h1 {
+  @apply scroll-m-20 text-4xl font-extrabold tracking-tight lg:text-5xl;
+}
+
+.h2 {
+  @apply mt-10 scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
+}
+
+.h3 {
+  @apply mt-8 scroll-m-20 text-2xl font-semibold tracking-tight;
+}
+
+.h4 {
+  @apply scroll-m-20 text-xl font-semibold tracking-tight;
+}
+
+.p {
+  @apply leading-7 [&:not(:first-child)]:mt-6;
+}
+
+.a {
+  @apply font-medium text-primary underline underline-offset-4;
+}
+
+.blockquote {
+  @apply mt-6 border-l-2 pl-6 italic;
+}
+
+.ul {
+  @apply my-6 ml-6 list-disc [&>li]:mt-2;
+}
+
+.code {
+  @apply relative rounded bg-muted px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
+}
+
+.lead {
+  @apply text-xl text-muted-foreground;
+}
+
+.large {
+  @apply text-lg font-semibold;
+}
+
+.small {
+  @apply text-sm font-medium leading-none;
 }
