--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  scroll-behavior: smooth;
+}
+
 @layer base {
   :root {
     --background: 0 0% 100%;
@@ -73,7 +77,7 @@
 }
 
 .h2 {
-  @apply mt-10 scroll-m-20 border-b pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
+  @apply mt-10 scroll-m-20 pb-2 text-3xl font-semibold tracking-tight transition-colors first:mt-0;
 }
 
 .h3 {
@@ -114,4 +118,21 @@
 
 .small {
   @apply text-sm font-medium leading-none;
+}
+
+/* Thin scrollbar track */
+::-webkit-scrollbar {
+  width: 4px;
+  position: absolute;
+}
+
+/* Thin scrollbar thumb */
+::-webkit-scrollbar-thumb {
+  background-color: #c4c4c2;
+  border-radius: 5px;
+}
+
+/* Thin scrollbar thumb on hover */
+::-webkit-scrollbar-thumb:hover {
+  background-color: #6d6d6c;
 }
